Layout Design- Splash , Home

--- a/app/src/main/res/layout/class_fragment.xml
+++ b/app/src/main/res/layout/class_fragment.xml
@@ -7,20 +7,34 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorGray"
+        android:gravity="center_vertical"
         android:padding="@dimen/padding_common_10"
         android:text="@string/classes"
         android:textAllCaps="true"
-        android:background="@color/colorGray"
-        android:gravity="center_vertical"
         android:textColor="@color/colorScheduleBottomUnSelect"
         android:textSize="@dimen/margin_common_25"
         android:textStyle="bold" />
-    <com.example.ymca.PullListLoader.XListView
-        android:id="@+id/classScheduleListView"
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:choiceMode="singleChoice"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:smoothScrollbar="true"/>
+        android:layout_height="match_parent">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/no_record"
+            android:textSize="@dimen/text_size_common_25"
+            android:textStyle="bold" />
+
+        <com.example.ymca.PullListLoader.XListView
+            android:id="@+id/classScheduleListView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:choiceMode="singleChoice"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:smoothScrollbar="true" />
+    </RelativeLayout>
 </LinearLayout>
