--- a/app/src/main/res/layout/date_fragment.xml
+++ b/app/src/main/res/layout/date_fragment.xml
@@ -27,42 +27,50 @@
             android:orientation="horizontal"
             android:gravity="right"
             android:padding="@dimen/padding_common_10"
+            android:weightSum="1"
             >
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_menu_send"
-                android:padding="@dimen/padding_common_10" />
+                android:padding="@dimen/padding_common_10"
+                android:id="@+id/prevButton"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:weightSum="1"
-                android:padding="@dimen/padding_common_5">
+                android:layout_weight=".15">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:text="Mon"
+                    android:text="Sat"
+                    android:textSize="@dimen/text_size_common_16"
                     android:layout_weight=".5"
-                    android:gravity="center_horizontal"
+                    android:gravity="center"
+                    android:id="@+id/dayTv"
+                    android:textStyle="bold"
                     />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight=".5"
-                    android:text="AUG 1"
-                    android:gravity="center_horizontal"/>
+                    android:text="AUG 22"
+                    android:textSize="@dimen/text_size_common_14"
+                    android:id="@+id/dateTv"
+                    android:gravity="center"/>
             </LinearLayout>
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_menu_send"
-                android:padding="@dimen/padding_common_10"/>
+                android:padding="@dimen/padding_common_10"
+                android:id="@+id/forwadButton"/>
 
         </LinearLayout>
 
