--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -97,6 +97,10 @@
                 android:weightSum="1"></LinearLayout>
         </LinearLayout>
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@android:color/white"/>
     <ImageButton
         android:layout_width="match_parent"
         android:layout_height="0dp"
