--- a/app/src/main/res/layout/date_fragment.xml
+++ b/app/src/main/res/layout/date_fragment.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
@@ -9,7 +10,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <TextView
+        <com.example.ymca.CustomFont.PrimaryFontText
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:padding="@dimen/padding_common_10"
@@ -18,7 +19,8 @@
             android:gravity="center_vertical"
             android:textColor="@color/colorScheduleBottomUnSelect"
             android:textSize="@dimen/margin_common_25"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:fontName="@string/custom_primary_font"/>
 
 
         <LinearLayout
@@ -33,8 +35,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_menu_send"
-                android:padding="@dimen/padding_common_10"
+                android:src="@drawable/schedule_arrow_prev"
                 android:id="@+id/prevButton"/>
 
             <LinearLayout
@@ -42,34 +43,36 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:weightSum="1"
-                android:layout_weight=".15">
+                android:layout_weight=".13">
 
-                <TextView
+                <com.example.ymca.CustomFont.PrimaryFontText
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:text="Sat"
                     android:textSize="@dimen/text_size_common_16"
                     android:layout_weight=".5"
-                    android:gravity="center"
+                    android:gravity="center_horizontal|bottom"
                     android:id="@+id/dayTv"
                     android:textStyle="bold"
+                    app:fontName="@string/custom_primary_font"
                     />
 
-                <TextView
+                <com.example.ymca.CustomFont.SecondaryFontText
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight=".5"
-                    android:text="AUG 22"
+                    android:text="Aug 22"
                     android:textSize="@dimen/text_size_common_14"
                     android:id="@+id/dateTv"
-                    android:gravity="center"/>
+                    android:layout_marginTop="-5dp"
+                    android:gravity="top|center_horizontal"
+                    app:fontName="@string/custom_secondary_font"/>
             </LinearLayout>
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_menu_send"
-                android:padding="@dimen/padding_common_10"
+                android:src="@drawable/schedule_arrow_next"
                 android:id="@+id/forwadButton"/>
 
         </LinearLayout>
@@ -81,13 +84,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+        <com.example.ymca.CustomFont.PrimaryFontText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="@string/no_record"
             android:textSize="@dimen/text_size_common_25"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:fontName="@string/custom_primary_font"/>
 
         <com.example.ymca.PullListLoader.XListView
             android:id="@+id/dateScheduleListView"
