--- a/app/src/main/res/layout/class_fragment.xml
+++ b/app/src/main/res/layout/class_fragment.xml
@@ -2,9 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <TextView
+    <com.example.ymca.CustomFont.PrimaryFontText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorGray"
@@ -14,19 +15,21 @@
         android:textAllCaps="true"
         android:textColor="@color/colorScheduleBottomUnSelect"
         android:textSize="@dimen/margin_common_25"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:fontName="@string/custom_primary_font"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+        <com.example.ymca.CustomFont.PrimaryFontText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="@string/no_record"
             android:textSize="@dimen/text_size_common_25"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:fontName="@string/custom_primary_font"/>
 
         <com.example.ymca.PullListLoader.XListView
             android:id="@+id/classScheduleListView"
