--- a/app/src/main/res/layout/instructor_items.xml
+++ b/app/src/main/res/layout/instructor_items.xml
@@ -1,32 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="100dp"
+    android:id="@+id/card_view"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:id="@+id/card_view">
+    android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp">
+    <!--<LinearLayout-->
+        <!--android:layout_width="120dp"-->
+        <!--android:layout_height="120dp">-->
 
-        <ImageView
-            android:id="@+id/userImg"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="fitXY"
-            android:src="@mipmap/ic_launcher" />
+            android:layout_height="120dp">
 
-        <TextView
-            android:id="@+id/userName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:background="@color/colorTransParent"
-            android:gravity="center"
-            android:padding="@dimen/padding_common_5"
-            android:text="Suzy"
-            android:textColor="@android:color/white" />
+            <ImageView
+                android:id="@+id/userImg"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:src="@drawable/user_img_default" />
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/userName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:background="@color/colorTransParent"
+                android:gravity="center"
+                android:padding="@dimen/padding_common_5"
+                android:text="Suzy"
+                android:textColor="@android:color/white" />
 
+        </RelativeLayout>
+    <!--</LinearLayout>-->
 </android.support.v7.widget.CardView>
