--- a/app/src/main/res/layout/schedule_fragment.xml
+++ b/app/src/main/res/layout/schedule_fragment.xml
@@ -2,13 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:weightSum="1">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
+        android:layout_weight=".1"
         android:weightSum="1.5">
 
         <LinearLayout
@@ -16,73 +19,72 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".5"
-            android:background="@color/colorScheduleBottomSelect"
+            android:background="@drawable/schedule_tabmenu"
             android:paddingBottom="@dimen/padding_common_5">
 
-            <TextView
+            <com.example.ymca.CustomFont.SecondaryFontText
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/colorScheduleTab"
+                android:background="@null"
                 android:gravity="center"
                 android:padding="@dimen/padding_common_10"
                 android:text="@string/date"
                 android:textColor="@android:color/white"
-                android:textSize="@dimen/text_size_common_14" />
+                android:textSize="@dimen/text_size_common_14"
+                android:textStyle="bold"
+                app:fontNames="@string/custom_secondary_font"/>
         </LinearLayout>
-
-        <View
-            android:layout_width="0.1dp"
-            android:layout_height="match_parent"
-            android:background="@android:color/black" />
 
         <LinearLayout
             android:id="@+id/classTab"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".5"
-            android:background="@color/colorScheduleBottomUnSelect"
+            android:background="@drawable/schedule_tabmenu_selected"
             android:paddingBottom="@dimen/padding_common_5">
 
-            <TextView
+            <com.example.ymca.CustomFont.SecondaryFontText
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/colorScheduleTab"
+                android:background="@null"
                 android:gravity="center"
                 android:padding="@dimen/padding_common_10"
                 android:text="@string/classe"
                 android:textColor="@android:color/white"
-                android:textSize="@dimen/text_size_common_14" />
+                android:textStyle="bold"
+                android:textSize="@dimen/text_size_common_14"
+                app:fontNames="@string/custom_secondary_font"/>
         </LinearLayout>
 
-        <View
-            android:layout_width="0.1dp"
-            android:layout_height="match_parent"
-            android:background="@android:color/black" />
+
 
         <LinearLayout
             android:id="@+id/instructorTab"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".5"
-            android:background="@color/colorScheduleBottomUnSelect"
+            android:background="@drawable/schedule_tabmenu_selected"
             android:paddingBottom="@dimen/padding_common_5">
 
-            <TextView
+            <com.example.ymca.CustomFont.SecondaryFontText
 
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/colorScheduleTab"
+                android:background="@null"
                 android:gravity="center"
                 android:padding="@dimen/padding_common_10"
                 android:text="@string/instructor"
                 android:textColor="@android:color/white"
-                android:textSize="@dimen/text_size_common_14" />
+                android:textSize="@dimen/text_size_common_14"
+                android:textStyle="bold"
+                app:fontNames="@string/custom_secondary_font"/>
         </LinearLayout>
     </LinearLayout>
 
     <FrameLayout
         android:id="@+id/content_child_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_weight=".9"
+        android:layout_height="0dp" />
 
 </LinearLayout>
