--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -44,4 +44,6 @@
     <dimen name="text_size_common_18">18sp</dimen>
     <dimen name="text_size_common_20">20sp</dimen>
     <dimen name="text_size_common_25">25sp</dimen>
+    <dimen name="text_size_common_30">30sp</dimen>
+    <dimen name="text_size_common_35">35sp</dimen>
 </resources>
